Fixed navbar alignment

--- a/css/login.css
+++ b/css/login.css
@@ -17,7 +17,7 @@
 
 body {
   background-color: #CA965C;
-  padding-bottom: 20px;
+  padding: 10px 0; /** Decreased padding from bottom and added same padding for top **/
 }
 
 #subHead1 {
@@ -34,9 +34,7 @@ body {
 #sign::before {
   content: " ";
   position: absolute;
-  /* background-image: linear-gradient(to right, #b40c57, #bf3370); */
   left: 0px;
-  /* top: 0px; */
   z-index: -1;
   height: 100vh;
   width: 100vw;
@@ -59,8 +57,6 @@ body {
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   margin-top: 50px;
   color: black;
-
-
 }
 
 .form-container p {
@@ -77,7 +73,6 @@ body {
   .form-container {
     max-width: 75vw;
   }
-
 }
 
 @media screen and (max-width: 450px) {
@@ -103,8 +98,6 @@ body {
   }
 
   #footer div {
-    /* margin-left: 8vw;
-        margin-right: 8vw; */
     display: flex;
     flex-direction: column;
   }
@@ -116,6 +109,7 @@ body {
 }
 
 /* footer styling */
+
 .logo {
   border-radius: 100%;
   mix-blend-mode: multiply;
@@ -128,12 +122,7 @@ body {
 }
 
 #footer div {
-  /* margin-left: 8vw;
-    margin-right: 8vw; */
-  /* display: flex;
-    justify-content: space-between; */
-  max-width: 80vw;
-  /* Adjust the maximum width to your preference */
+  max-width: 80vw; /* Adjust the maximum width to your preference */
   margin: auto;
 }
 
@@ -159,13 +148,28 @@ body {
 }
 
 .login-container {
-  max-width: 800px;
-  /* Adjust the width as needed */
+  max-width: 800px; /* Adjust the width as needed */
+  max-height: 600px; /** added height to aviod lot of empty space **/
   margin: 0 auto;
-  padding: 20px;
+  padding: 10px;
   border-radius: 8px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  /* Shadow effect */
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* Shadow effect */
   color: white;
   background-color: white;
+}
+
+/** Added right margin to nav ul **/
+
+.navbar-nav {
+  margin-right: 100px;
+}
+
+/** Added this to avoid text underline on hover **/
+
+.Done-button {
+  text-decoration: none;
+}
+
+.Done-button:hover {
+  text-decoration: none;
 }
